objects/Account.object
<CustomObject>
    <fields>
        <fullName>AW_GroupType__c</fullName>
        <description>Type of client grouping</description>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Growth_Strategy__c</fullName>
        <description>The strategy the entity will adopt to enable growth to reach their target or goal</description>
        <label>Growth Strategy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_HobbiesInterests__c</fullName>
        <description>Select hobby option from picklist</description>
        <label>Hobbies/Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3D printing</fullName>
                </value>
                <value>
                    <fullName>Air sports</fullName>
                </value>
                <value>
                    <fullName>Archery</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Astronomy</fullName>
                </value>
                <value>
                    <fullName>Baking</fullName>
                </value>
                <value>
                    <fullName>Baseball</fullName>
                </value>
                <value>
                    <fullName>BASE jumping</fullName>
                </value>
                <value>
                    <fullName>Basketball</fullName>
                </value>
                <value>
                    <fullName>Beekeeping</fullName>
                </value>
                <value>
                    <fullName>Bird watching</fullName>
                </value>
                <value>
                    <fullName>Blogging</fullName>
                </value>
                <value>
                    <fullName>BMX</fullName>
                </value>
                <value>
                    <fullName>Bodybuilding</fullName>
                </value>
                <value>
                    <fullName>Butterfly watching</fullName>
                </value>
                <value>
                    <fullName>Calligraphy</fullName>
                </value>
                <value>
                    <fullName>Camping</fullName>
                </value>
                <value>
                    <fullName>Canoeing</fullName>
                </value>
                <value>
                    <fullName>Composting</fullName>
                </value>
                <value>
                    <fullName>Cooking</fullName>
                </value>
                <value>
                    <fullName>Crossword puzzles</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
                <value>
                    <fullName>DIY</fullName>
                </value>
                <value>
                    <fullName>Fashion design</fullName>
                </value>
                <value>
                    <fullName>Fishing</fullName>
                </value>
                <value>
                    <fullName>Flying</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Gardening</fullName>
                </value>
                <value>
                    <fullName>Graffiti</fullName>
                </value>
                <value>
                    <fullName>Graphic design</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_InvestmentPropensityRecommendation__c</fullName>
        <description>This field stores the top two score of the investment propensity model for recommendation</description>
        <label>Investment Propensity Recommendation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_IsBirthdayToday__c</fullName>
        <description>Indicates if the client has a birthday today</description>
        <formula>AND( MONTH( TODAY()) = MONTH ( PersonBirthdate ), DAY( TODAY()) = DAY(  PersonBirthdate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Birthday Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_IsReallocated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field if used to check whether account is already reallocated or not.</description>
        <label>Is Reallocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_Last_Synch_Date__c</fullName>
        <description>The date that the client account record was synchronised across systems</description>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_Last_Updated_Date_from_Source__c</fullName>
        <description>The date that the client account record was updated from the source</description>
        <label>Source Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_MobileUsage__c</fullName>
        <description>This field indicates if the Mobile Usage description is Business or Private</description>
        <label>Mobile Usage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Mobile__c</fullName>
        <description>This field is used to store a Mobile number of a Business Account.</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AW_MonthlyIncome__c</fullName>
        <description>Total value of the clients monthly income</description>
        <formula>AW_Income__pc / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_NameofOrphansPreviousAdviser__c</fullName>
        <description>Name of the adviser the client previously belonged to prior to becoming an orphan</description>
        <label>Name of that Orphan&apos;s previous Adviser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Nationality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the country that the client is a national citizen of</description>
        <label>Nationality</label>
        <referenceTo>AW_Country__c</referenceTo>
        <relationshipLabel>Accounts (Nationality)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_NetWorth__c</fullName>
        <description>Denotes clients net value after subtracting liabilities from assets</description>
        <formula>(AW_FA_TotalHeldAwayBank__c + AW_FA_TotalHeldAwayInvestments__c + AW_FA_TotalHeld_Away_Loan_account__c + AW_TotalHeldAwayRetirement__c) + (AW_TotalHeldInvestments__c + AW_TotalHeldLoan__c + AW_TotalHeldRetirement__c + AW_FA_TotalAssets__c) - ( AW_FA_TotalLiabilities__c +AW_TotalHeldAwayCreditCard__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_OccupationDutyAdmin__c</fullName>
        <description>This field is used to store the admin occupation duty</description>
        <label>Admin</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_OccupationDutyLightManual__c</fullName>
        <description>This field is used to store the occupation duty for light manual</description>
        <label>Light Manual</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_OccupationDutyModerateHeavy__c</fullName>
        <description>This field is for occupation duty for moderate or heavy.</description>
        <label>Moderate or Heavy Manual</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_OccupationDutyNonOfficeSupervisor__c</fullName>
        <description>Tis field is used to store the occupation duty for non office supervisor</description>
        <label>Supervisory within nonoffice environment</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_OccupationDutyOfficeSupervisor__c</fullName>
        <description>Percentage of the clients time spend on performing Office Supervisory duties</description>
        <label>Supervisory within an office environment</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_OccupationDutyTravel__c</fullName>
        <description>This field is used to store the occupation duty for travel</description>
        <label>Travel</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_Orphan_Indicator__c</fullName>
        <description>Display Account Owner Full Name or &quot;Orphan&quot;  based on the value in the Account Ownership field</description>
        <formula>CASE( AW_Account_Ownership__c, 
&quot;Advice Centre&quot;, Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName, 
&quot;Adviser&quot;, Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName,
&quot;Orphan&quot;, &quot;Orphan&quot;,
NULL)</formula>
        <label>Ownership Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_OtherEngagementFrequency__c</fullName>
        <description>When other is selected in Engagement Frequency picklist - user should enter value here</description>
        <label>Other Engagement Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_OtherEngagementPreferenceType__c</fullName>
        <description>When chosen other, should enter alternative Contact Preference Type</description>
        <label>Other Engagement Preference Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_OtherInformation__c</fullName>
        <description>Additional Information on the client/entity</description>
        <label>Other Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AW_Outcome__c</fullName>
        <description>Identifies the outcome of the adviser engaging a referred client</description>
        <label>Outcome</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AW_OwnerChangedDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date at which account was sent to the adviser</description>
        <label>Owner Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_Owner_UACFID__c</fullName>
        <description>The Liberty Unique identifier of the client account record owner</description>
        <formula>Owner.AW_UACFID__c</formula>
        <label>Owner UACFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ParentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the clients master record</description>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_PhoneUsage__c</fullName>
        <description>This field indicates if the Phone Usage description is Business or Private</description>
        <label>Phone Usage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PhysicalCity__c</fullName>
        <description>This field represents the Physical City of the Client</description>
        <label>Physical City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PhysicalCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to store Physical Country of the Client</description>
        <label>Physical Country</label>
        <referenceTo>AW_Country__c</referenceTo>
        <relationshipLabel>Accounts (Physical Country)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_PhysicalPostalCode__c</fullName>
        <description>Field to store Physical Postal Code of the Client</description>
        <label>Physical Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PhysicalStreetLineOne__c</fullName>
        <description>Field to store Physical Street Line 1 of a Client</description>
        <label>Physical Street Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PhysicalStreetLineThree__c</fullName>
        <description>Field to store Physical Street Line 3 of a Client</description>
        <label>Physical Street Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PhysicalStreetLineTwo__c</fullName>
        <description>Field to store Physical Street Line 2 of a Client</description>
        <label>Physical Street Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PhysicalSuburb__c</fullName>
        <description>Field to store Physical Suburb of a Client</description>
        <label>Physical Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PoliciesRefreshStatusDate__c</fullName>
        <description>Shows the date and time when the status of policies related to an Account was last refreshed.</description>
        <label>Policies Refresh Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_PoliciesRefreshStatus__c</fullName>
        <description>Shows the refresh status of Policies related to Account record.</description>
        <label>Policies Refresh Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never Refreshed</fullName>
                    <default>true</default>
                    <label>Never Refreshed</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Partially completed</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PostalAddressLineOne__c</fullName>
        <description>Field to store Postal Address Line 1 for a Client</description>
        <label>Postal Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PostalAddressLineThree__c</fullName>
        <description>Field to store Postal Address Line 3 for Clients</description>
        <label>Postal Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PostalAddressLineTwo__c</fullName>
        <description>Field to store Postal Address Line 2 for Clients</description>
        <label>Postal Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PostalCity__c</fullName>
        <description>This field represents the Postal City of the Client</description>
        <label>Postal City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PostalCode__c</fullName>
        <description>Field to store Postal Code for Clients</description>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PostalCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to store Postal Country for Clients</description>
        <label>Postal Country</label>
        <referenceTo>AW_Country__c</referenceTo>
        <relationshipLabel>Accounts (Postal Country)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_PostalSuburb__c</fullName>
        <description>Field to store Postal Suburb for Clients</description>
        <label>Postal Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PredictionAnnuityModelScore__c</fullName>
        <description>This field stores the propensity model scores for Discovery Model &quot;Account Propensity Model For Annuity Product Group&quot;</description>
        <label>Prediction Annuity Model Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PredictionAnnuityModelStatus__c</fullName>
        <description>This field will store the Accepted/ Rejected Status for the Einstein Next best Recommendations</description>
        <label>Prediction Annuity Model Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PredictionBondModelScore__c</fullName>
        <description>This field stores the propensity model scores for Discovery Model &quot;Account Propensity Model For Bond Product Group&quot;</description>
        <label>Prediction Bond Model Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PredictionBondModelStatus__c</fullName>
        <description>This field will store the Accepted/ Rejected Status for the Einstein Next best Recommendations</description>
        <label>Prediction Bond Model Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PredictionChildEducationModelScore__c</fullName>
        <description>This field store the propensity score from discovery prediction model &quot;Account Propensity Model For Child Education Product Group&quot;</description>
        <label>Prediction Child Education Model Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PredictionChildEducationModelStatus__c</fullName>
        <description>This field will store the Accepted/ Rejected Status for the Einstein Next best Recommendations for Child Education Model</description>
        <label>Prediction Child Education  Model Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PredictionEducationModelScore__c</fullName>
        <description>This field store the propensity score from discovery prediction model &quot;Account Propensity Model For Education Product Group&quot;</description>
        <label>Prediction Education Model Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PredictionEducationModelStatus__c</fullName>
        <description>This field will store the Accepted/ Rejected Status for the Einstein Next best Recommendations for Education Model</description>
        <label>Prediction Education Model Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PredictionInvestmentModelScore__c</fullName>
        <description>This field stores the propensity scores for Einstein Discovery model &quot;Account Propensity Model For Investment Product Group&quot;</description>
        <label>Prediction Investment Model Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PredictionInvestmentModelStatus__c</fullName>
        <description>This field will store the Accepted/ Rejected Status for the Einstein Next best Recommendations for Investment Model</description>
        <label>Prediction Investment Model Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PredictionLifeCoverModelScore__c</fullName>
        <description>This field store the propensity score from discovery prediction model &quot;Account Propensity Model For Life Cover Product Group&quot;</description>
        <label>Prediction Life Cover Model Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PredictionLifeCoverModelStatus__c</fullName>
        <description>This field will store the Accepted/ Rejected Status for the Einstein Next best Recommendations for Life Cover  Model</description>
        <label>Prediction Life Cover Model Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PredictionPHDisablementModelScore__c</fullName>
        <description>This field store the propensity score from discovery prediction model &quot;Account Propensity Model For 
Policy Holder Disablement Product Group&quot;</description>
        <label>Prediction PH Disablement Model Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PredictionPHDisablementModelStatus__c</fullName>
        <description>This field will store the Accepted/ Rejected Status for the Einstein Next best Recommendations for Policy Holder Disablement Model</description>
        <label>Prediction PH Disablement Model Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PredictionPHDreadDiseaseModelStatus__c</fullName>
        <description>This field will store the Accepted/ Rejected Status for the Einstein Next best Recommendations for Policy Holder Dread Disease Model</description>
        <label>Prediction PH Dread Disease Model Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PredictionPHDreadDiseaseScore__c</fullName>
        <description>This field store the propensity score from discovery prediction model &quot;Account Propensity Model For Policy Holder Dread Disease Product Group&quot;</description>
        <label>Prediction PH Dread Disease Model Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PredictionPolicyPremiumModelScore__c</fullName>
        <description>This field store the propensity score from discovery prediction model &quot;Account Propensity Model For Policy Premium Product Group&quot;</description>
        <label>Prediction Policy Premium Model Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PredictionPolicyPremiumModelStatus__c</fullName>
        <description>This field will store the Accepted/ Rejected Status for the Einstein Next best Recommendations for
 Policy Premium Model</description>
        <label>Prediction Policy Premium Model Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PredictionRetirementModelScore__c</fullName>
        <description>This field store the propensity score from discovery prediction model &quot;Account Propensity Model For Retirement Annuity Product Group&quot;</description>
        <label>Prediction Retirement Model Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PredictionRetirementModelStatus__c</fullName>
        <description>This field will store the Accepted/ Rejected Status for the Einstein Next best Recommendations for Retirement Model</description>
        <label>Prediction Retirement Model Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PreviousBranch__c</fullName>
        <description>Clients previously preferred branch</description>
        <label>Previous Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PriorOwnershipCategory__c</fullName>
        <description>The category of the previous ownership of an entity which is used Orphan Management Account Report</description>
        <label>Prior Ownership Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Professional_Body_Reg_Number__c</fullName>
        <description>Indicates the clients registration number with the  professional body</description>
        <label>Professional Body Reg Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Professional_Body__c</fullName>
        <description>An organisation that the client is a member of which is formally recognised by charter or statute as having jurisdiction over a profession or a section of a profession</description>
        <label>Professional Body</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_Professional_Bodies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PropensityRecommendation__c</fullName>
        <description>This field will populate the combination of Investment and Risk Propensity Recommendation</description>
        <formula>AW_InvestmentPropensityRecommendation__c +  &apos; &apos; + AW_RiskPropensityRecommendation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propensity Recommendation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_RD_AnnualReviewDateCompleted__c</fullName>
        <description>This field replicates the Commencement Date field( Annual Review Date - Completed). This was created in order to use this as a Dashboard filter( Converted from Date data type to Date/Time data type ).</description>
        <formula>DATETIMEVALUE(AW_AnnualReviewDateCompleted__pc)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Review Date - Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_RegionId__c</fullName>
        <description>The Identification of the region</description>
        <externalId>true</externalId>
        <label>Region Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Region__c</fullName>
        <description>The particular area or part of the country</description>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_RiskPropensityRecommendation__c</fullName>
        <description>This field stores the top two score of the Risk propensity model for recommendation</description>
        <label>Risk Propensity Recommendation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SA_Resident_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the client is a South African citizen</description>
        <label>SA Resident Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_SKF_Id__c</fullName>
        <description>The unique identifier of the client record on SKF  which is used to store the SKF ID of a Master account</description>
        <externalId>true</externalId>
        <label>SKF Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SameAsResidentialPhysical__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field when checked copies physical /residential address into postal address</description>
        <label>Same as Residential/Physical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_Source_System_Name__c</fullName>
        <description>This field is used to store the Liberty source system name</description>
        <label>Source System Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>atWork</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Avalon</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>BPNB</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>SFDC</label>
                </value>
                <value>
                    <fullName>SKF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>